Add device access for SDL gamepad support

--- a/io.github.ptitSeb.hydracastlelabyrinth.yml
+++ b/io.github.ptitSeb.hydracastlelabyrinth.yml
@@ -5,8 +5,8 @@ sdk: org.freedesktop.Sdk
 command: io.github.ptitSeb.hydracastlelabyrinth.sh
 
 finish-args:
-  # hardware 3D
-  - --device=dri
+  # hardware 3D and game controller support
+  - --device=all
   # X11 access
   - --share=ipc
   - --socket=x11
